--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "MIT",
   "description": "JSExpert Max Gesture Controller - Semana JS Expert 7.0",
   "devDependencies": {
-    "browser-sync": "^2.27.11"
+    "browser-sync": "^2.27.11",
+    "eslint": "^8.35.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
